updated blog content

--- a/content/blog/Ionic Icons 309d7eae5e7842b7b06052b785ffa212.md
+++ b/content/blog/Ionic Icons 309d7eae5e7842b7b06052b785ffa212.md
@@ -1,5 +1,4 @@
-# Ionic Icons
-
+---
 cloudinary_convert: No
 cover: https://media.codingcat.dev/image/upload/v1600704494/ccd-cloudinary/ionic_icons_everywhere.png
 devto: https://dev.to/codingcatdev/ionic-icons-1e07
@@ -9,7 +8,8 @@ preview: https://codingcat.dev/api/preview?secret=7tjQhb1qQlS3FtyV3b0I&selection
 published: published
 slug: ionic-icons
 start: January 20, 2019
-
+title: Ionic Icons
+---
 You can just add the unpkg tag to your head?
 
 Demo: [https://ion-icon.firebaseapp.com/](https://ion-icon.firebaseapp.com/)
