--- a/content/blog/Reflections from 2021 & Goals for 2022 640c440f8659470a899f3e6362313877.md
+++ b/content/blog/Reflections from 2021 & Goals for 2022 640c440f8659470a899f3e6362313877.md
@@ -1,5 +1,4 @@
-# Reflections from 2021 & Goals for 2022
-
+---
 cloudinary_convert: No
 cover: http://media.codingcat.dev/image/upload/v1640973161/main-codingcatdev-photo/og-image.jpg
 devto: https://dev.to/codingcatdev/reflections-from-2021-goals-for-2022-3af8
@@ -9,7 +8,8 @@ preview: https://codingcat.dev/api/preview?secret=7tjQhb1qQlS3FtyV3b0I&selection
 published: published
 slug: reflections-from-2021-and-goals-for-2022
 start: December 31, 2021
-
+title: Reflections from 2021 & Goals for 2022
+---
 The year of 2021 has been the biggest year of my career. It is sometimes difficult to talk about success when the entire world is struggling and you can really see your privilage showing. However, it is still important to talk about our wins and our losses and to be proud of what you have accomplished.
 
 I set some lofty goals after watching [Zero to Mastery's Future Proof Yourself Workshop](https://academy.zerotomastery.io/p/future-proof-yourself?affcode=441520_gjue7n-1) early in 2021. My big goals were to start a business of my own and to make more money than I had in any previous career, I didn't care how I did it (freelancing, courses, new job), just that I got it done. Well, I am happy to say, not only did I do it, I blew it away. I did some freelance work early in the year, filed for my LLC, bDesignedDev in July, and at the time got my dream job at Grainger, building design systems with Svelte. I also did things I didn't even think were possible this year. I started co-hosting [Purrfect.dev](https://purrfect.dev/) with Alex and got to talk to some incredible people and learned so much from this opportunity. It made me more comfortable speaking in public and helped me grow as a developer from the things I was learning about.
