--- a/content/tutorial/Hugo Ionic Template 5a6904e2014d499eb99593602495a190.md
+++ b/content/tutorial/Hugo Ionic Template 5a6904e2014d499eb99593602495a190.md
@@ -1,5 +1,4 @@
-# Hugo Ionic Template
-
+---
 cloudinary_convert: No
 cover: http://media.codingcat.dev/image/upload/v1616547399/main-codingcatdev-photo/kewwx7rull4s45bdidds.jpg
 devto: https://dev.to/codingcatdev/hugo-ionic-template-5e09
@@ -9,8 +8,9 @@ preview: https://codingcat.dev/api/preview?secret=7tjQhb1qQlS3FtyV3b0I&selection
 published: published
 slug: hugo-ionic-template
 start: May 19, 2022
+title: Hugo Ionic Template
 youtube: https://youtu.be/tgXFNqInA0w
-
+---
 > Please note that while working through this tutorial I chose to make branches instead of tags to see if people would enjoy that more. However there was an update to the Victor/Hugo template to start using webpack and I don't want to confuse anyone, so please don't pull the master branch to start.
 > 
 - master (initial)
